# slicer_simulator

./: .gitignore  CMakeLists.txt  README.MD
editor/: local.lua
src/: main.cpp  simulation.cpp  simulation.h  util.cpp  util.h
